--- a/web-sayfam/src/layouts/SkillsCss.css
+++ b/web-sayfam/src/layouts/SkillsCss.css
@@ -2,19 +2,21 @@
   display: flex;
   margin-left: 15rem;
   margin-right: 15rem;
-  
   margin-top: 2rem;
 }
 .Skills{
     color: #4832D3;
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 .images{
-    width: 350px;
+    width: 200px;
     margin-left: 4rem;
     
 }
 .ImagesDiv{
 margin-left: 16rem;
 
+}
+.SecondMain{
+  margin: 0 auto;
 }
